= Jason release notes
:toc: right

ifdef::env-github[:outfilesuffix: .adoc]

== version 2.3

- Java 1.8but a is now used
- new syntax: operator `--` to delete some belief with new focus for the event.
- new internal action: .drop_future_intention (see javadoc api for more information)
- new internal action: .printf, inspired in Java Format
  (https://docs.oracle.com/javase/tutorial/java/data/numberformat.html)
+
----
I=4;
D=34.123;
.printf("i=%08.0f and d=%10.2f", I, D);
----
+
produces:
----
i=00000004 and d=     34.12
----

== version 2.2 (2017-09-21)

(a built package is available at https://sourceforge.net/projects/jason/files/jason/version%202.2/[here])

- new syntax for atoms: as in Prolog, any sequence of characters enclosed by `'` can be used. Examples:
** `'$%12'` (atom)
** `b('@1')` (term using new syntax, in this case, the term is an atom and not a string)
** `'$%12'(10)` (literal with functor using new syntax)

- new syntax: optional `elif` in conditional statement. Example:
+
----
if   (e(1)) { .print(a); }
elif (e(2)) { .print(b); }
elif (e(3)) { .print(c); }
else        { .print(d); }
----

- this release fixes some bugs and improves documentation

== version 2.1 (2016-12-15)

(a built package is available at https://sourceforge.net/projects/jason/files/jason/version%202.1/[here])

- this release just fixes some bugs

== version 2.0 (2016-09-15)

(a built package is available at https://sourceforge.net/projects/jason/files/jason/version%202.0/[here])

*New features*

- modules and namespaces, see link:doc/tech/modules-namespaces.pdf[]

- concurrent courses of actions within a single plan and advanced concurrent agent architectures, see link:doc/tech/concurrency{outfilesuffix}[]

- operator `+` works with plans and rules enclosed by { and }. For instance:
+
----
...
+ { p :- q & r };
+ { +b : p <- .print(ok) };
...
----

- two new parameters in the .jason/user.properties file: `kqmlPlansFile` (the file